--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</a-entity>
 	<a-entity id="oneshot"
 		geometry="primitive: box" material="color: blue" position="1 0 -2"
-		n-sound="res: ui/select; volume: 0.7; autoplay: true; oneshot: true; on: click"
+		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 		<a-entity n-text="fontSize: 2; text: oneshot" position="0 1 0"></a-entity>
