--- a/index.html
+++ b/index.html
@@ -104,12 +104,22 @@
 		n-text="fontSize: 2; text: text you can read comfortably"
 		n-cockpit-parent>
 		<a-entity id="oneshot"
-		geometry="primitive: box" material="color: blue" position="1 0 -2"
+		geometry="primitive: box" material="color: red" position="1 0 -2"
 		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 		</a-entity>
-	</a-entity>	
+	</a-entity>
+	<a-entity
+		position="0 1 -0.7"
+		scale="0.2 0.2 0.2"
+		rotation="0 0 0"
+		geometry="primitive: box" material="color: red"
+		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
+		altspace-cursor-collider="enabled: true"
+		sync="own-on: mousedown" sync-n-sound>
+		n-cockpit-parent>
+	</a-entity>
 </a-scene>
 </body>
 </html>
