--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		geometry="primitive: box" material="color: red"
 		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
-		sync="own-on: mousedown" sync-n-sound>
+		sync="own-on: mousedown" sync-n-sound
 		n-cockpit-parent>
 	</a-entity>
 </a-scene>
