--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 		scale="0.2 0.2 0.2"
 		rotation="0 0 0"
 		geometry="primitive: box" material="color: red"
-		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: mousedown"
+		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: mouseup"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound
 		n-cockpit-parent>
