--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 		scale="0.2 0.2 0.2"
 		rotation="0 0 0"
 		geometry="primitive: box" material="color: red"
-		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: mouseup"
+		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
-		sync="own-on: mousedown" sync-n-sound
+		sync="own-on: click" sync-n-sound
 		n-cockpit-parent>
 	</a-entity>
 </a-scene>
