--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 		rotation="0 0 0"
 		geometry="primitive: box" material="color: red"
 		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
+		wire="on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: click" sync-n-sound
 		n-cockpit-parent>
