--- a/index.html
+++ b/index.html
@@ -112,13 +112,22 @@
 	</a-entity>
 	<a-entity
 		position="0 0.5 -0.7"
-		scale="0.2 0.2 0.2"
+		scale="0.1 0.1 0.1"
 		rotation="0 0 0"
 		geometry="primitive: box" material="color: red"
 		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
-		wire="on: click"
 		altspace-cursor-collider="enabled: true"
-		sync="own-on: click" sync-n-sound
+		sync="own-on: mousedown" sync-n-sound
+		n-cockpit-parent>
+	</a-entity>
+	<a-entity
+		position="0 0.5 -0.5"
+		scale="0.2 0.2 0.2"
+		rotation="0 0 0"
+		geometry="primitive: box" material="color: green"
+		n-sound="src: files/yay1.mp3; volume: 0.7; oneshot: true; on: click"
+		altspace-cursor-collider="enabled: true"
+		sync="own-on: mousedown" sync-n-sound
 		n-cockpit-parent>
 	</a-entity>
 </a-scene>
