--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		sync="own-on: mousedown" sync-n-sound>	
 	</a-entity>
 	<a-entity
-		position="0 0.5 -0.7"
+		position="0.5 0.5 -0.5"
 		scale="0.1 0.1 0.1"
 		rotation="0 0 0"
 		geometry="primitive: box" material="color: red"
@@ -100,6 +100,14 @@
 		sync="own-on: mousedown" sync-n-sound
 		n-cockpit-parent>
 	</a-entity>
+	<a-entity
+		position="0 0.5 -0.5"
+		scale="0.1 0.1 0.1"
+		rotation="0 0 0"
+		geometry="primitive: box" material="color: blue"
+		altspace-cursor-collider="enabled: true"
+		n-cockpit-parent>
+	</a-entity>	
 </a-scene>
 </body>
 </html>
