--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 		n-cockpit-parent>
 	</a-entity>
 	<a-entity
+		id="laugh"  
 		position="-0.5 0.5 -0.5"
 		scale="0.1 0.1 0.1"
 		rotation="0 0 0"
