--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 		sync="own-on: mousedown" sync-n-sound>	
 	</a-entity>
 	<a-entity
+		id="laugh"
 		position="0.5 0.5 -0.5"
 		scale="0.1 0.1 0.1"
 		rotation="0 0 0"
@@ -91,7 +92,7 @@
 		n-cockpit-parent>
 	</a-entity>
 	<a-entity
-		id="laugh"  
+		id="yay"  
 		position="-0.5 0.5 -0.5"
 		scale="0.1 0.1 0.1"
 		rotation="0 0 0"
