--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		n-sound="src: files/yay1.mp3; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound
-		n-cockpit-parent>
+		n-cockpit-parent="on: click">
 	</a-entity>
 	<a-entity
 		position="0 0.5 -0.5"
