--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
 		rotation="0 0 0"
 		geometry="primitive: box" material="color: green"
 		n-sound="src: files/yay1.mp3; volume: 0.7; oneshot: true; on: click"
-		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound
-		n-cockpit-parent="on: click">
+		n-cockpit-parent altspace-cursor-collider="enabled: true">
 	</a-entity>
 	<a-entity
 		position="0 0.5 -0.5"
