--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 		scale="0.1 0.1 0.1"
 		rotation="0 0 0"
 		geometry="primitive: box" material="color: green"
+		n-cockpit-parent altspace-cursor-collider="enabled: true"
 		n-sound="src: files/yay1.mp3; volume: 0.7; oneshot: true; on: click"
-		sync="own-on: mousedown" sync-n-sound
-		n-cockpit-parent altspace-cursor-collider="enabled: true">
+		sync="own-on: mousedown" sync-n-sound>
 	</a-entity>
 	<a-entity
 		position="0 0.5 -0.5"
