--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
 		rotation="0 0 0"
 		geometry="primitive: box" material="color: red"
 		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
-		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound
-		n-cockpit-parent>
+		n-cockpit-parent altspace-cursor-collider="enabled: true">
 	</a-entity>
 	<a-entity
 		id="yay"  
