--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 	</a-entity>
 	<a-entity
 		id="metal-armor-instantiator"
-		geometry="primitive: box" material="color: blue"
-		instantiator="group: armor; on: click; mixin: metal-armor parent-to-chest"
+		geometry="primitive: box" material="color: yellow" 
+		parent-to-chest
 		position="2.3 2 0">
 	</a-entity>
 	<a-entity
