--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 		id="metal-armor-instantiator"
 		geometry="primitive: box" material="color: yellow" 
 		n-skeleton-parent="part: chest;"
-		sync sync-n-skeleton-parent
+		sync sync-n-skeleton-parent altspace-cursor-collider="enabled: true"
+		n-sound="src: files/yay1.mp3; volume: 0.7; oneshot: true; on: click"
 		position="2.3 2 0">
 	</a-entity>
 	<a-entity
