--- a/index.html
+++ b/index.html
@@ -114,20 +114,9 @@
 		sync="own-on: mousedown" sync-n-sound>
 	</a-entity>
 	<a-entity
-		position="0 0.5 -0.5"
-		scale="0.1 0.1 0.1"
-		rotation="0 0 0"
-		geometry="primitive: box" material="color: blue"
-		n-cockpit-parent altspace-cursor-collider="enabled: true">
-		<a-entity 
-			n-sound="src: files/yay1.mp3; volume: 0.7; oneshot: true; on: click"
-			sync="own-on: mousedown" sync-n-sound>
-		</a-entity>
-	</a-entity>
-	<a-entity
 		id="metal-armor-instantiator"
 		geometry="primitive: box" material="color: yellow" 
-		n-skeleton-parent="part: chest;"
+		n-skeleton-parent="part: chest"
 		sync sync-n-skeleton-parent altspace-cursor-collider="enabled: true"
 		n-sound="src: files/yay1.mp3; volume: 0.7; oneshot: true; on: click"
 		position="2.3 2 0">
