--- a/index.html
+++ b/index.html
@@ -95,13 +95,12 @@
 	</a-entity>
 	<a-entity
 		id="laugh"
-		position="0.5 0.5 -0.5"
-		scale="0.1 0.1 0.1"
-		rotation="0 0 0"
 		geometry="primitive: box" material="color: red"
 		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		sync="own-on: mousedown" sync-n-sound
-		n-skeleton-parent="part: chest" altspace-cursor-collider="enabled: true">
+		n-skeleton-parent="part: chest" altspace-cursor-collider="enabled: true"
+		position="0.5 0.5 -0.5"
+		scale="0.1 0.1 0.1">
 	</a-entity>
 	<a-entity
 		id="metal-armor-instantiator"
