--- a/index.html
+++ b/index.html
@@ -98,15 +98,14 @@
 		geometry="primitive: box" material="color: red"
 		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		sync="own-on: mousedown" sync-n-sound
-		n-skeleton-parent="part: chest" altspace-cursor-collider="enabled: true"
+		n-skeleton-parent="part: chest;" altspace-cursor-collider="enabled: true"
 		position="0.5 0.5 -0.5"
 		scale="0.1 0.1 0.1">
 	</a-entity>
 	<a-entity
 		id="metal-armor-instantiator"
 		geometry="primitive: box" material="color: yellow" 
-		n-skeleton-parent="part: chest"
-		sync sync-n-skeleton-parent altspace-cursor-collider="enabled: true"
+		altspace-cursor-collider="enabled: true"
 		n-sound="src: files/yay1.mp3; volume: 0.7; oneshot: true; on: click"
 		position="2.3 2 0">
 	</a-entity>
