--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 	<a-entity
 		id="metal-armor-instantiator"
 		geometry="primitive: box" material="color: yellow" 
-		altspace-cursor-collider="enabled: true"
 		n-sound="src: files/yay1.mp3; volume: 0.7; oneshot: true; on: click"
-		position="2.3 2 0">
+		position="2.3 2 0"
+		altspace-cursor-collider="enabled: true">
 	</a-entity>
 	<a-entity
 		id="initial-synced-box"
