--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 		id="metal-armor-instantiator"
 		geometry="primitive: box" material="color: yellow" 
 		n-sound="src: files/yay1.mp3; volume: 0.7; oneshot: true; on: click"
+		sync="own-on: mousedown" sync-n-sound
 		position="2.3 2 0"
 		altspace-cursor-collider="enabled: true">
 	</a-entity>
