--- a/soundboard.html
+++ b/soundboard.html
@@ -19,7 +19,7 @@
 <a-scene altspace="fullspace: true" sync-system="author: altspacevr; app: sound-sync-soundboard">
 
   <a-entity id="applause"
-		geometry="primitive: box" material="color: blue" position="10.2 4 -6.5"
+		geometry="primitive: box" material="color: blue" position="8.2 4 -6.5" rotation="0 20 0" scale="0.5 0.5 0.5"
 		n-sound="src: files/short-applause1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
@@ -27,7 +27,7 @@
 	</a-entity>
 
   <a-entity id="cheer"
-		geometry="primitive: box" material="color: green" position="10.2 4 -6"
+		geometry="primitive: box" material="color: green" position="9.2 4 -6.5" rotation="0 20 0" scale="0.5 0.5 0.5"
 		n-sound="src: files/cheer1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
@@ -35,7 +35,7 @@
 	</a-entity>
   
   <a-entity id="boo"
-		geometry="primitive: box" material="color: red" position="10.2 4 -5.5"
+		geometry="primitive: box" material="color: red" position="10.2 4 -6.5" rotation="0 20 0" scale="0.5 0.5 0.5"
 		n-sound="src: files/boo2.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
@@ -43,7 +43,7 @@
 	</a-entity>
   
   <a-entity id="laugh"
-		geometry="primitive: box" material="color: blue" position="9.7 4 -6.5"
+		geometry="primitive: box" material="color: blue" position="11.2 4 -6.5" rotation="0 20 0" scale="0.5 0.5 0.5"
 		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
@@ -51,7 +51,7 @@
 	</a-entity>
 
   <a-entity id="laugh2"
-		geometry="primitive: box" material="color: blue" position="10.7 4 -5.5"
+		geometry="primitive: box" material="color: blue" position="12.2 4 -5.5" rotation="0 20 0" scale="0.5 0.5 0.5"
 		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
