--- a/soundboard.html
+++ b/soundboard.html
@@ -23,7 +23,7 @@
 		n-sound="src: files/short-applause1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
-		<a-entity n-text="fontSize: 2; text: Applause" position="0 1 0"></a-entity>
+		<a-entity n-text="fontSize: 2; text: Applause" position="0 0.5 0"></a-entity>
 	</a-entity>
 
  	<a-entity id="cheer"
@@ -31,7 +31,7 @@
 		n-sound="src: files/cheer1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
-		<a-entity n-text="fontSize: 2; text: Cheer" position="0 1 0"></a-entity>
+		<a-entity n-text="fontSize: 2; text: Cheer" position="0 0.5 0"></a-entity>
 	</a-entity>
   
 	<a-entity id="boo"
@@ -39,15 +39,15 @@
 		n-sound="src: files/boo2.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
-		<a-entity n-text="fontSize: 2; text: Boo" position="0 1 0"></a-entity>
+		<a-entity n-text="fontSize: 2; text: Boo" position="0 0.5 0"></a-entity>
 	</a-entity>
   
 	<a-entity id="laugh"
-		geometry="primitive: box" material="color: blue" position="11.2 4 -7.4" rotation="0 20 0" scale="0.5 0.5 0.1"
+		geometry="primitive: box" material="color: yellow" position="11.2 4 -7.4" rotation="0 20 0" scale="0.5 0.5 0.1"
 		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
-		<a-entity n-text="fontSize: 2; text: laugh1" position="0 1 0"></a-entity>
+		<a-entity n-text="fontSize: 2; text: laugh" position="0 0.5 0"></a-entity>
 	</a-entity>
 
 </a-scene>
