--- a/soundboard.html
+++ b/soundboard.html
@@ -19,7 +19,7 @@
 <a-scene altspace="fullspace: true" sync-system="author: altspacevr; app: sound-sync-soundboard">
 
 	<a-entity id="applause"
-		geometry="primitive: box" material="src: files/clap.png" position="8.2 4 -6.5" rotation="0 20 0" scale="0.5 0.5 0.1"
+		geometry="primitive: box" material="src: files/laugh.png" position="8.2 4 -6.5" rotation="0 20 0" scale="0.5 0.5 0.1"
 		n-sound="src: files/short-applause1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
