--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>	
 	</a-entity>
+	<a-box color='red' 
+	       	n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
+		sync="own-on: mousedown" sync-n-sound
+		n-skeleton-parent="part: chest;" altspace-cursor-collider="enabled: true"
+		position="0.5 0.5 -0.5"
+		scale="0.1 0.1 0.1">
+	</a-box>
 	<a-entity
 		id="laugh"
 		geometry="primitive: box" material="color: red"
