--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 	<a-box color='white' 
 	       	n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		sync="own-on: mousedown" sync-n-sound
-		n-skeleton-parent="part: chest;" altspace-cursor-collider="enabled: true"
-		scale="0.5 0.5 0.5">
+		n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
+		scale="2 2 2">
 	</a-box>
 	<a-entity
 		id="laugh"
