--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 	       	n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		sync="own-on: mousedown" sync-n-sound
 		n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
-		scale="2 2 2">
+		position="0 0 1"
+	       	scale="0.5 0.5 0.5">
 	</a-box>
 	<a-entity
 		id="laugh"
