--- a/cockpit.html
+++ b/cockpit.html
@@ -40,9 +40,7 @@
     		<a-entity n-text="fontSize: 2; text: Applause" position="0 0.5 0" rotation="30 0 0"></a-entity>
 	</a-box>
 	<a-text value="Applause!"
-	  	n-sound="src: files/short-applause1.wav; volume: 0.7; oneshot: true; on: click"
-		sync="own-on: mousedown" sync-n-sound
-		n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
+		n-skeleton-parent="part: spine;"
 		position="0 -0.5 -2"
 	  	scale="0.3 0.1 0.1"
     		rotation="30 0 0">
@@ -57,6 +55,13 @@
     		rotation="30 0 0">
     		<a-entity n-text="fontSize: 2; text: Cheer" position="0 0.5 0" rotation="30 0 0"></a-entity>
 	</a-box>
+	
+	<a-entity n-text="fontSize: 2; text: Cheer"
+		n-skeleton-parent="part: spine;"
+		position="0 -0.5 -2"
+	  	scale="0.3 0.1 0.1"
+    		rotation="30 0 0">
+	</a-entity>
   
 	<a-box color='red' 
 	  	n-sound="src: files/boo2.wav; volume: 0.7; oneshot: true; on: click"
