--- a/cockpit.html
+++ b/cockpit.html
@@ -28,7 +28,7 @@
 	</script>
 </head>
 <body>
-<a-scene debug altspace="fullspace: true" sync-system="author: altspacevr; app: sound-sync-test">
+<a-scene altspace="fullspace: true" sync-system="author: altspacevr; app: sound-sync-test">
 
 	<a-box color='blue' 
 	  	n-sound="src: files/short-applause1.wav; volume: 0.7; oneshot: true; on: click"
