--- a/cockpit.html
+++ b/cockpit.html
@@ -34,7 +34,8 @@
 	  	n-sound="src: files/short-applause1.wav; volume: 0.7; oneshot: true; on: click"
 		sync="own-on: mousedown" sync-n-sound
 		n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
-		position="0 -1 -2"
+		sync sync-n-skeleton-parent
+	       	position="0 -1 -2"
 	  	scale="0.4 0.1 0.1"
     		rotation="-30 0 0">
 	</a-box>
@@ -48,7 +49,8 @@
 	  	n-sound="src: files/cheer1.wav; volume: 0.7; oneshot: true; on: click"
 		sync="own-on: mousedown" sync-n-sound
 		n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
-		position="0.5 -1 -2"
+		sync sync-n-skeleton-parent
+	       	position="0.5 -1 -2"
 	  	scale="0.4 0.1 0.1"
     		rotation="-30 0 0">
 	</a-box>
@@ -62,7 +64,8 @@
 	  	n-sound="src: files/boo2.wav; volume: 0.7; oneshot: true; on: click"
 		sync="own-on: mousedown" sync-n-sound
 		n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
-		position="1 -1 -2"
+		sync sync-n-skeleton-parent
+	       	position="1 -1 -2"
 	  	scale="0.4 0.1 0.1"
     		rotation="-30 0 0">
 	</a-box>
@@ -77,7 +80,8 @@
 	  	n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
 		sync="own-on: mousedown" sync-n-sound
 		n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
-		position="1.5 -1 -2"
+		sync sync-n-skeleton-parent
+	       	position="1.5 -1 -2"
 	  	scale="0.4 0.1 0.1"
     		rotation="-30 0 0">
 	</a-box>
