--- a/cockpit2.html
+++ b/cockpit2.html
@@ -37,7 +37,7 @@
 			sync="own-on: mousedown" sync-n-sound
 			n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
 			sync sync-n-skeleton-parent
-	       		position="0 0 -1"
+	       		position="0 -0.1 -1"
 	  		scale="0.3 0.1 0.1"
     			rotation="-30 0 0">
 		</a-mixin>
@@ -48,7 +48,7 @@
 			sync="own-on: mousedown" sync-n-sound
 			n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
 			sync sync-n-skeleton-parent
-	       		position="0.5 0 -1"
+	       		position="0.3 -0.1 -1"
 	  		scale="0.3 0.1 0.1"
     			rotation="-30 0 0">
 		</a-mixin>	
@@ -59,7 +59,7 @@
 			sync="own-on: mousedown" sync-n-sound
 			n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
 			sync sync-n-skeleton-parent
-	       		position="1 0 -1"
+	       		position="0.6 -0.1 -1"
 	  		scale="0.3 0.1 0.1"
     			rotation="-30 0 0">
 		</a-mixin>	
@@ -70,7 +70,7 @@
 			sync="own-on: mousedown" sync-n-sound
 			n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
 			sync sync-n-skeleton-parent
-	       		position="1.5 0 -1"
+	       		position='0.9 -0.1 -1"
 	  		scale="0.3 0.1 0.1"
     			rotation="-30 0 0">
 		</a-mixin>
@@ -100,17 +100,17 @@
 	</a-entity>
   	<a-entity n-text="fontSize: 1; text: Cheer"
 		n-skeleton-parent="part: spine;"
-		position="0.5 0 -1"
+		position="0.3 0 -1"
     		rotation="-30 0 0">
 	</a-entity>
   	<a-entity n-text="fontSize: 1; text: Boo"
 		n-skeleton-parent="part: spine;"
-		position="1 0 -1"
+		position="0.6 0 -1"
     		rotation="-30 0 0">
 	</a-entity>
 	<a-entity n-text="fontSize: 1; text: Laugh"
 		n-skeleton-parent="part: spine;"
-		position="1.5 0 -1"
+		position="0.9 0 -1"
     		rotation="-30 0 0">
 	</a-entity>	
 	
