--- a/cockpit2.html
+++ b/cockpit2.html
@@ -70,7 +70,7 @@
 			sync="own-on: mousedown" sync-n-sound
 			n-skeleton-parent="part: spine;" altspace-cursor-collider="enabled: true"
 			sync sync-n-skeleton-parent
-	       		position='0.9 -0.1 -1"
+	       		position="0.9 -0.1 -1"
 	  		scale="0.3 0.1 0.1"
     			rotation="-30 0 0">
 		</a-mixin>
