--- a/cockpit2.html
+++ b/cockpit2.html
@@ -93,22 +93,23 @@
 		  one-per-user="mixin: laugh">
 	</a-entity>	
 
-	<a-entity n-text="fontSize: 0.5; text: Applause"
+	<a-entity n-text="fontSize: 1; text: Applause"
 		n-skeleton-parent="part: spine;"
 		position="0 0 -1"
-    		rotation="-30 0 0">
+    		rotation="-30 0 0"
+		scale="0.5 0.5 0.5">
 	</a-entity>
-  	<a-entity n-text="fontSize: 0.5; text: Cheer"
+  	<a-entity n-text="fontSize: 1; text: Cheer"
 		n-skeleton-parent="part: spine;"
 		position="0.35 0 -1"
     		rotation="-30 0 0">
 	</a-entity>
-  	<a-entity n-text="fontSize: 0.5; text: Boo"
+  	<a-entity n-text="fontSize: 1; text: Boo"
 		n-skeleton-parent="part: spine;"
 		position="0.7 0 -1"
     		rotation="-30 0 0">
 	</a-entity>
-	<a-entity n-text="fontSize: 0.5; text: Laugh"
+	<a-entity n-text="fontSize: 1; text: Laugh"
 		n-skeleton-parent="part: spine;"
 		position="1.05 0 -1"
     		rotation="-30 0 0">
