--- a/cockpit2.html
+++ b/cockpit2.html
@@ -102,17 +102,20 @@
   	<a-entity n-text="fontSize: 1; text: Cheer"
 		n-skeleton-parent="part: spine;"
 		position="0.35 0 -1"
-    		rotation="-30 0 0">
+    		rotation="-30 0 0"
+		scale="0.5 0.5 0.5">
 	</a-entity>
   	<a-entity n-text="fontSize: 1; text: Boo"
 		n-skeleton-parent="part: spine;"
 		position="0.7 0 -1"
-    		rotation="-30 0 0">
+    		rotation="-30 0 0"
+		scale="0.5 0.5 0.5">
 	</a-entity>
 	<a-entity n-text="fontSize: 1; text: Laugh"
 		n-skeleton-parent="part: spine;"
 		position="1.05 0 -1"
-    		rotation="-30 0 0">
+    		rotation="-30 0 0"
+		scale="0.5 0.5 0.5">
 	</a-entity>	
 	
 </a-scene>
