--- a/soundboard.html
+++ b/soundboard.html
@@ -23,7 +23,7 @@
 		n-sound="src: files/short-applause1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
-		<a-text value="Applause" height="10" position="0 0.5 0"></a-text>
+		<a-text value="Applause" color="white" height="10" position="0 0.5 0"></a-text>
 	</a-entity>
 
  	<a-entity id="cheer"
