--- a/soundboard.html
+++ b/soundboard.html
@@ -25,6 +25,7 @@
 		sync="own-on: mousedown" sync-n-sound>
 	</a-entity>
 	<a-text value="Applause" color="white" height="10" position="-1 6.5 9"></a-text>
+	<a-entity text="value: Hello World;"></a-entity>
 
  	<a-entity id="cheer"
 		geometry="primitive: box" material="color: green" position="-0.5 6 9" rotation="0 0 0" scale="0.1 0.1 0.05"
@@ -32,6 +33,7 @@
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 		<a-entity n-text="fontSize: 1; text: Cheer" position="0 0.5 0"></a-entity>
+		<a-entity text="value: Hello World;"></a-entity>
 	</a-entity>
   
 	<a-entity id="boo"
@@ -39,7 +41,7 @@
 		n-sound="src: files/boo2.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
-		<a-entity n-text="fontSize: 1; text: Boo" position="0 0.5 0"></a-entity>
+		<a-entity n-text="fontSize: 1; text: Boo;" position="0 0.5 0"></a-entity>
 	</a-entity>
   
 	<a-entity id="laugh"
