--- a/soundboard.html
+++ b/soundboard.html
@@ -69,7 +69,7 @@
 	
 	<a-entity id="Laugh1"
 		geometry="primitive: box" material="color: green" position="-0.75 4.5 9" rotation="0 0 0" scale="0.15 0.15 0.05"
-		n-sound="src: files/Small_Group_Laugh.wav; volume: 0.7; oneshot: true; on: click"
+		n-sound="src: files/small_Laugh.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 		<a-entity n-text="fontSize: 2; text: Laugh1" position="0 0.3 0"></a-entity>
@@ -78,7 +78,7 @@
 
  	<a-entity id="Laugh2"
 		geometry="primitive: box" material="color: green" position="-0.45 4.5 9" rotation="0 0 0" scale="0.15 0.15 0.05"
-		n-sound="src: files/Small_Group_Laugh_2.wav; volume: 0.7; oneshot: true; on: click"
+		n-sound="src: files/small_Laugh2.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 		<a-entity n-text="fontSize: 2; text: Laugh2" position="0 0.3 0"></a-entity>
@@ -86,7 +86,7 @@
   
 	<a-entity id="Laugh3"
 		geometry="primitive: box" material="color: green" position="-0.15 4.5 9" rotation="0 0 0" scale="0.15 0.15 0.05"
-		n-sound="src: files/boo2.wav; volume: 0.7; oneshot: true; on: click"
+		n-sound="src: files/small_Laugh3.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 		<a-entity n-text="fontSize: 1; text: Laugh3;" position="0 0.3 0"></a-entity>
@@ -94,7 +94,7 @@
   
 	<a-entity id="Laugh4"
 		geometry="primitive: box" material="color: green" position="0.15 4.5 9" rotation="0 0 0" scale="0.15 0.15 0.05"
-		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
+		n-sound="src: files/small_Laugh4.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 		<a-entity n-text="fontSize: 1; text: Laugh4" position="0 0.3 0"></a-entity>
@@ -102,7 +102,7 @@
 	
 		<a-entity id="Laugh5"
 		geometry="primitive: box" material="color: green" position="0.45 4.5 9" rotation="0 0 0" scale="0.15 0.15 0.05"
-		n-sound="src: files/boo2.wav; volume: 0.7; oneshot: true; on: click"
+		n-sound="src: files/small_Laugh5.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 		<a-entity n-text="fontSize: 1; text: Laugh5;" position="0 0.3 0"></a-entity>
@@ -110,7 +110,7 @@
   
 	<a-entity id="Laugh6"
 		geometry="primitive: box" material="color: green" position="0.75 4.5 9" rotation="0 0 0" scale="0.15 0.15 0.05"
-		n-sound="src: files/laugh1.wav; volume: 0.7; oneshot: true; on: click"
+		n-sound="src: files/small_Laugh6.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 		<a-entity n-text="fontSize: 1; text: Laugh6" position="0 0.3 0"></a-entity>
