--- a/soundboard.html
+++ b/soundboard.html
@@ -20,12 +20,18 @@
 
 	<a-entity id="applause1"
 		geometry="primitive: box" material="color: green" position="-0.75 5 9" rotation="0 0 0" scale="0.15 0.15 0.05"
+		wire="on: click; emit: toggle; targets: #applause1a"
 		n-sound="src: files/short-applause1.wav; volume: 0.7; oneshot: true; on: click"
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 		<a-entity n-text="fontSize: 2; text: Applause1" position="0 0.3 0"></a-entity>
 	</a-entity>
 	<a-text value="Applause1" color="white" position="-0.45 5.5 9"></a-text>
+	<a-entity id="applause1a"
+		geometry="primitive: box" material="color: white" position="-0.75 1 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+		n-sound="src: files/short-applause1.wav; volume: 0.7; oneshot: true; on: click"
+		sync="own-on: mousedown" sync-n-sound>
+	</a-entity>
 
  	<a-entity id="Applause2"
 		geometry="primitive: box" material="color: green" position="-0.45 5 9" rotation="0 0 0" scale="0.15 0.15 0.05"
