--- a/soundboard.html
+++ b/soundboard.html
@@ -29,7 +29,7 @@
 	<a-text value="Applause1" color="white" position="-0.45 5.5 9"></a-text>
 	<a-entity id="applause1a"
 		geometry="primitive: box" material="color: white" position="-0.75 1 0" rotation="0 0 0" scale="0.15 0.15 0.05"
-		n-sound="src: files/short-applause1.wav; volume: 0.7; oneshot: true; on: click"
+		n-sound="src: files/small_Laugh.wav; volume: 0.7; oneshot: true; on: click"
 		sync="own-on: mousedown" sync-n-sound>
 	</a-entity>
 
